<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:layout_margin="12dp"
    >
    <LinearLayout
        android:id="@+id/lin_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lin_layout_start_input">

        <TextView
            style="@style/TextViewTitleAppearance"
            android:id="@+id/start_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_header" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_layout_start_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="19dp"
        app:layout_constraintTop_toBottomOf="@id/lin_layout_header"
        app:layout_constraintBottom_toTopOf="@id/start_button_submit"
        >

        <TextView
            style="@style/TextViewHeader1Appearance"
            android:id="@+id/start_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_description_team_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_team_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/start_team_name_hint">

            <EditText
                android:id="@+id/edit_text_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="@integer/start_max_team_code"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/TextViewHeader1Appearance"
            android:id="@+id/start_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_description_user_name"
            android:layout_marginTop="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_user_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/start_user_name_hint"
            app:counterMaxLength="@integer/start_max_name_len">

            <EditText
                android:id="@+id/edit_text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="@integer/start_max_name_len"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_button_submit"
        android:text="@string/start_button_description_submit"
        app:layout_constraintTop_toBottomOf="@id/lin_layout_start_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/ButtonAppearance"/>

</androidx.constraintlayout.widget.ConstraintLayout>