<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".challenge.ChallengeFragment"
    android:layout_margin="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr_challenge_header_weekly_challenges"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/fr_challenge_lin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />
<LinearLayout
    app:layout_constraintTop_toBottomOf="@id/message2"
    app:layout_constraintBottom_toBottomOf="@id/fr_challenge_score_title"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fr_challenge_lin_top"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/fr_challenge_travel_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fr_challenge_travel_title_placeholder"
                />
            <TextView
                android:id="@+id/fr_challenge_travel_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fr_challenge_placeholder"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="10">
                <TextView
                    android:id="@+id/fr_challenge_travel_count_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>
                <ProgressBar
                    android:id="@+id/fr_challenge_progressBar_travel"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="83dp"
                    tools:layout_editor_absoluteY="103dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="6"/>
                <Button
                    android:id="@+id/fr_challenge_button_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:layout_marginStart="8dp"
                    android:textSize="30sp"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/fr_challenge_eat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr_challenge_travel_title_placeholder"
            />
        <TextView
            android:id="@+id/fr_challenge_eat_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr_challenge_placeholder"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="10">
            <TextView
                android:id="@+id/fr_challenge_eat_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
            <ProgressBar
                android:id="@+id/fr_challenge_progressBar_eat"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="103dp"
                android:layout_marginStart="8dp"
                android:layout_weight="6"/>
            <Button
                android:id="@+id/fr_challenge_button_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:layout_marginStart="8dp"
                android:textSize="30sp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/fr_challenge_lin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fr_challenge_score"
            android:id="@+id/fr_challenge_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr_challenge_score_text"/>
        <TextView
            android:id="@+id/fr_challenge_score"
            app:layout_constraintTop_toBottomOf="@id/fr_challenge_score_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr_challenge_score_demo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>