<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryChooserActivity"
    android:layout_margin="12dp">

    <TextView
        style="@style/TextViewTitleAppearance"
        android:id="@+id/category_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/category_lin_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/category_lin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/category_header"
        app:layout_constraintBottom_toTopOf="@id/category_button_submit">

        <LinearLayout
            android:id="@+id/category_lin_layout_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewHeader1Appearance"
                android:id="@+id/text_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Travel" />

            <TextView
                style="@style/TextViewHeader2Appearance"
                android:id="@+id/text_travel_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Travel with less C02 emissions" />

            <RadioGroup
                android:id="@+id/category_radio_group_travel"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/category_lin_layout_travel_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/category_travel_edit_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="80dp"
                    android:maxLength="2"
                    android:inputType="number" />

                <TextView
                    style="@style/StandardTextAppearance"
                    android:id="@+id/category_travel_num_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_week" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/category_lin_layout_eat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                style="@style/TextViewHeader1Appearance"
                android:id="@+id/text_eat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Eat" />

            <TextView
                style="@style/TextViewHeader2Appearance"
                android:id="@+id/text_eat_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Eat environmentally" />

            <RadioGroup
                android:id="@+id/category_radio_group_eat"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/category_lin_layout_eat_num"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/category_eat_edit_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:minWidth="80dp"
                    android:inputType="number" />

                <TextView
                    style="@style/StandardTextAppearance"
                    android:id="@+id/category_eat_num_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_week" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/category_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_description_submit"
        style="@style/ButtonAppearance"
        app:layout_constraintTop_toBottomOf="@id/category_lin_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>